<?xml version="1.0"?>
<package>
  <name>turtlebot_artisteril_description</name>
  <version>0.1.0</version>
  <description>The turtlebot_artisteril_description package</description>

  <maintainer email="riazuelo@unizar.es">Luis Riazuelo</maintainer>
  <license>BSD</license>
  <author email="riazuelo@unizar.es">Luis Riazuelo</author>	

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
